fixed text-in-circle alignment

--- a/css/driving.css
+++ b/css/driving.css
@@ -15,6 +15,7 @@ h2 {
   font-size: 6em;
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
+  text-align: center;
 }
 
 img.bg {
@@ -35,18 +36,19 @@ img.bg {
 }
 
 #startstop {
-  position: relative;
-  top: -650px;
-  left: -474px;
-  text-align: center;
+  position: absolute;
+  top: 845px;
+  
 }
 
 .start {
   color: deepskyblue;
+  left: 216px;
 }
 
 .stop {
   color: orangered;
+  left: 237px;
 }
 
 
